fix: minor changes